Update terraform deployment for Gromacs on Slurm-GCP

--- a/gromacs/tf/slurm/basic.tfvars.tmpl
+++ b/gromacs/tf/slurm/basic.tfvars.tmpl
@@ -2,13 +2,13 @@ cluster_name = "<cluster name>"
 project = "<project>"
 zone = "<zone>"
 
-controller_image = "projects/hpc-apps/global/images/gromacs-gcp-latest"
-login_image = "projects/hpc-apps/global/images/gromacs-gcp-latest"
+controller_image = "<image>"
+login_image = "<image>"
 
 partitions = [
-  { name                 = "wrf"
+  { name                 = "gromacs"
     machine_type         = "<machine_type>"
-    image                = "projects/hpc-apps/global/images/gromacs-gcp-latest"
+    image                = "<image>"
     image_hyperthreads   = true
     static_node_count    = 0
     max_node_count       = <max_node>
@@ -17,8 +17,8 @@ partitions = [
     compute_disk_size_gb = 50
     compute_labels       = {}
     cpu_platform         = null
-    gpu_count            = 0
-    gpu_type             = null
+    gpu_count            = <gpu_count>
+    gpu_type             = <gpu_type>
     network_storage      = []
     preemptible_bursting = false
     vpc_subnet           = null
