--- a/gromacs/tf/slurm/fluid.tfvars.tmpl
+++ b/gromacs/tf/slurm/fluid.tfvars.tmpl
@@ -14,7 +14,7 @@ partitions = [
     max_node_count       = <node_count>
     zone                 = "<zone>"
     compute_disk_type    = "pd-standard"
-    compute_disk_size_gb = 50
+    compute_disk_size_gb = 250
     compute_labels       = {}
     cpu_platform         = null
     gpu_count            = <gpu_count>
@@ -43,7 +43,7 @@ partitions = [
 # suspend_time  = 300
 
 controller_machine_type = "n1-standard-4"
-# controller_disk_type    = "pd-standard"
+controller_disk_type    = "pd-standard"
 controller_disk_size_gb = 250
 # controller_labels = {
 #   key1 = "val1"
@@ -62,8 +62,8 @@ controller_disk_size_gb = 250
 # controller_secondary_disk_type = "pd-ssd"
 
 login_machine_type = "n1-standard-4"
-# login_disk_type    = "pd-standard"
-# login_disk_size_gb = 20
+login_disk_type    = "pd-standard"
+login_disk_size_gb = 250
 # login_labels = {
 #   key1 = "val1"
 #   key2 = "val2"
@@ -95,8 +95,8 @@ login_machine_type = "n1-standard-4"
 # }]
 
 # compute_image_machine_type = "n1-standard-2"
-# compute_image_disk_type    = "pd-standard"
-# compute_image_disk_size_gb = 20
+compute_image_disk_type    = "pd-standard"
+compute_image_disk_size_gb = 250
 # compute_image_labels = {
 #   key1 = "val1"
 #   key2 = "val2"
